crates/hir-ty/tests/snapshots/jls_final_capture__field_write_through_final_receiver.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    static class Holder {
        int value;
        int[] data;
    }
    void m(final Holder h, final int[] arr, final int idx) {
        h.value = 5;
        h.data[0] = 6;
        arr[idx] = 7;
    }
}
