crates/hir-ty/tests/snapshots/jls_final_capture__final_field_initialized.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Ok {
    final int f;
    final int g = 1;
    static final int s;
    Ok() {
        f = 2;
    }
    static {
        s = 3;
    }
}
