crates/hir-ty/tests/snapshots/jls_final_capture__inner_class_capture_effectively_final.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Capture.java:
package com.example;

class Capture {
    int field;
    void m(int param, final int fixed) {
        int once = 1;
        int blank;
        blank = 2;
        class Inner {
            int use() {
                return once + blank + param + fixed + field;
            }
        }
        new Inner();
    }
}
