crates/hir-ty/tests/snapshots/jls_final_capture__inner_class_captures_through_two_declarations.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Capture.java:
package com.example;

class Capture {
    void m(int param) {
        class Outer {
            void n() {
                class Inner {
                    int use() {
                        return param;
                    }
                }
                new Inner();
            }
        }
        new Outer().n();
    }
}
