crates/hir-ty/tests/snapshots/jls_final_capture__inner_class_declaration_not_captured.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Capture.java:
package com.example;

class Capture {
    void m() {
        int local = 1;
        local = 2;
        class Inner {
            int use() {
                return 1;
            }
        }
        new Inner();
    }
}
