crates/hir-ty/tests/snapshots/jls_final_capture__instance_final_written_from_static_context.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final() {
        f = 1;
    }
    static {
        f = 2;
    }
}

static {}
  @8:8..8:9 'f': non-static-field-from-static-context: Non-static field 'f' cannot be referenced from a static context
  @8:8..8:9 'f': cannot-assign-to-final-variable: Cannot assign a value to final variable 'f'
