crates/hir-ty/tests/snapshots/jls_final_capture__lambda_body_local_shadows_param.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Shadow.java:
package com.example;

import java.util.function.Consumer;

class Shadow {
    void h(Consumer<String> c) {}

    void m() {
        h(i -> {
            String i = "inner";
        });
    }
}

method m(): void
  @9:19..9:30 'i = "inner"': duplicate-declaration: Variable 'i' is already defined in the scope
